--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ COMMON NOODLE DISH. TYPICAL RAMEN NOODLES ARE LONG AND ELASTIC, BUT COUNTLESS
 VARIETIES EXIST THAT VARY FROM THIN AND STRAIGHT TO THICK AND WAVY. SOME RAMEN-YA
 ALLOW YOU TO CUSTOMIZE YOUR NOODLE ORDER.</p></div></div>
 
-<img src="/Users/juliachen/Documents/webdev/css_selectors/ClipartKey_435174.png"</img>
+<img src="ClipartKey_435174.png"</img>
 
 <div class="container3">
   <div class="toppings">
